ensure no overflow for upcoming videos

--- a/src/components/DefaultLayout.css
+++ b/src/components/DefaultLayout.css
@@ -23,6 +23,7 @@
 
 .DefaultLayout__center {
   grid-area: center;
+  overflow: hidden;
 
   display: grid;
   grid-template-columns: auto 800px;
